@@ -77,6 +77,7 @@
 #define RPL_MYINFO 4
 #define RPL_BOUNCE 5
 #define RPL_SNOMASK 8
+#define RPL_CAPAB 290
 #define RPL_USERHOST 302
 #define RPL_ISON 303
 #define RPL_AWAY 301
